--- a/lynx.cfg
+++ b/lynx.cfg
@@ -2545,10 +2545,10 @@ KEYMAP:e:EDIT			# Edit current document or form's textarea (call: ^Ve)
 #KEYMAP:E:ELGOTO		# Edit the current link's URL or ACTION and go to it
 KEYMAP:i:INFO			# Show info about current document
 #KEYMAP:p:PRINT			# Show print options
-#KEYMAP:a:ADD_BOOKMARK		# Add current document to bookmark list
-#KEYMAP:v:VIEW_BOOKMARK		# View the bookmark list
-#KEYMAP:V:VLINKS		# List links visited during the current Lynx session
-#KEYMAP:!:SHELL			# Spawn default shell
+KEYMAP:a:ADD_BOOKMARK		# Add current document to bookmark list
+KEYMAP:v:VIEW_BOOKMARK		# View the bookmark list
+KEYMAP:V:VLINKS		# List links visited during the current Lynx session
+KEYMAP:!:SHELL			# Spawn default shell
 KEYMAP:d:DOWNLOAD		# Download current link
 #KEYMAP:j:JUMP			# Jump to a predefined target
 #KEYMAP:k:KEYMAP		# Display the current key map
@@ -3016,7 +3016,7 @@ COLOR:6:brightred:black
 # and together with each file specified, provides those as choices in the
 # O)ptions menu.
 #
-#COLOR_STYLE: lynx.lss
+COLOR_STYLE: lynx.lss
 #COLOR_STYLE: blue-background.lss
 #COLOR_STYLE: bright-blue.lss
 #COLOR_STYLE: midnight.lss
@@ -3028,7 +3028,7 @@ COLOR:6:brightred:black
 # It is enabled by default when the COLOR_STYLE configuration is used,
 # and false otherwise.
 #
-NESTED_TABLES: false
+NESTED_TABLES: TRUE
 
 .h2 ASSUMED_COLOR
 # If built with a library that recognizes default colors (usually ncurses or
